--- a/MemeMe V1.0/Info.plist
+++ b/MemeMe V1.0/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to camera to take pictures.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>The app saves memes to the photo library</string>
 	<key>CFBundleDevelopmentRegion</key>
